--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "homepage": "https://github.com/andremarcondesteixeira/blackjack-web-game#readme",
   "dependencies": {
+    "@koa/router": "^12.0.1",
     "koa": "^2.15.3"
   },
   "devDependencies": {
-    "@types/koa": "^2.15.0"
+    "@types/koa": "^2.15.0",
+    "@types/koa__router": "^12.0.4"
   }
 }
