--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/andremarcondesteixeira/blackjack-web-game#readme",
   "dependencies": {
     "@koa/router": "^12.0.1",
-    "koa": "^2.15.3"
+    "koa": "^2.15.3",
+    "koa-body": "^6.0.1"
   },
   "devDependencies": {
     "@types/koa": "^2.15.0",
