--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "@types/koa": "^2.15.0",
-    "@types/koa__router": "^12.0.4"
+    "@types/koa__router": "^12.0.4",
+    "@types/supertest": "^6.0.2",
+    "supertest": "^7.0.0"
   }
 }
